--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,34 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
+import '@fontsource/biz-udpgothic/400.css';
+import '@fontsource/biz-udpgothic/700.css';
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+    
+<div class="bg-white overflow-x-clip py-10">
+    <div class="relative mx-auto">
+      <div class="flex justify-center flex-col items-center z-10 bg-white/75 space-y-5 md:space-y-10">
+        <div class="w-full flex justify-center px-10">
+          <img src="/hero.svg" class="w-full max-w-[500px]" />
+        </div>
+        <div class="w-full flex justify-center">
+          <img src="/hero_subtitle.svg" class="w-full max-w-[500px]" />
+        </div>
+        <a
+          href="/seminor/"
+          class="flex justify-between items-center bg-gradient-to-r from-primary-400 from-0% via-primary-400 via-40% to-primary-200 to-90% p-3 shadow-xl mt-10 border-b-[4px] border-b-buttonborder border-r-[4px] border-r-buttonborder"
+        >
+          <p
+            class="tracking-wider font-bold text-white text-base sm:text-xl md:text-2xl"
+          >
+            まずは説明会へ
+          </p>
+        </a>
+      </div>
+    </div>
+  </div>
+  
 </Layout>
