--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,20 +9,20 @@ import '@fontsource/biz-udpgothic/700.css';
 <Layout>
     
 <div class="bg-white overflow-x-clip py-10">
-    <div class="relative mx-auto">
-      <div class="flex justify-center flex-col items-center z-10 bg-white/75 space-y-5 md:space-y-10">
-        <div class="w-full flex justify-center px-10">
-          <img src="/hero.svg" class="w-full max-w-[500px]" />
+    <div class="">
+      <div class="">
+        <div class="">
+          <img src="/hero.svg" width="500" />
         </div>
         <div class="w-full flex justify-center">
-          <img src="/hero_subtitle.svg" class="w-full max-w-[500px]" />
+          <img src="/hero_subtitle.svg" width="500" />
         </div>
         <a
           href="/seminor/"
-          class="flex justify-between items-center bg-gradient-to-r from-primary-400 from-0% via-primary-400 via-40% to-primary-200 to-90% p-3 shadow-xl mt-10 border-b-[4px] border-b-buttonborder border-r-[4px] border-r-buttonborder"
+          class=""
         >
           <p
-            class="tracking-wider font-bold text-white text-base sm:text-xl md:text-2xl"
+            class=""
           >
             まずは説明会へ
           </p>
