--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import '@fontsource/biz-udpgothic';
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
@@ -22,7 +23,6 @@ import Layout from '../layouts/Layout.astro';
           <p
             class=""
           >
-            まずは説明会へ
           </p>
         </a>
       </div>
@@ -30,3 +30,9 @@ import Layout from '../layouts/Layout.astro';
   </div>
   
 </Layout>
+
+<style>
+    body {
+  font-family: 'BIZ UDPGothic', sans-serif;
+}
+</style>
