--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import '@fontsource/biz-udpgothic';
+import '@fontsource/biz-udpgothic/400.css';
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
@@ -11,7 +11,7 @@ import '@fontsource/biz-udpgothic';
     <div class="">
       <div class="">
         <div class="">
-          <img src="/hero.svg" width="500" />
+          <img src="/hero.svg" width="500" fetchpriority="high"/>
         </div>
         <div class="w-full flex justify-center">
           <img src="/hero_subtitle.svg" width="500" />
@@ -31,8 +31,3 @@ import '@fontsource/biz-udpgothic';
   
 </Layout>
 
-<style>
-    body {
-  font-family: 'BIZ UDPGothic', sans-serif;
-}
-</style>
