--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import '@fontsource/biz-udpgothic/400.css';
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
@@ -16,12 +15,17 @@ import '@fontsource/biz-udpgothic/400.css';
         <div class="w-full flex justify-center">
           <img src="/hero_subtitle.svg" width="500" />
         </div>
-        <a
-          href="/seminor/"
-          class=""
-        >
-       
-        </a>
+   
+          <p
+            class=""
+          >
+          あいうえおかきくけこ
+          </p>
+          <p
+            class=""
+          >
+          さしすせそ
+          </p>
       </div>
     </div>
   </div>
