--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,6 +26,11 @@ import Layout from '../layouts/Layout.astro';
           >
           さしすせそ
           </p>
+          <p
+            class=""
+          >
+          かきくけこ
+          </p>
       </div>
     </div>
   </div>
