--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,25 +9,25 @@ import Layout from '../layouts/Layout.astro';
 <div class="bg-white overflow-x-clip py-10">
     <div class="">
       <div class="">
-        <div class="">
-          <img src="/hero.svg" width="500" fetchpriority="high"/>
+        <div class="flex justify-center">
+          <img src="/hero.svg" fetchpriority="high" class="max-w-[500px]"/>
         </div>
-        <div class="w-full flex justify-center">
-          <img src="/hero_subtitle.svg" width="500" />
+        <div class="w-full flex justify-center ">
+          <img src="/hero_subtitle.svg"  class="max-w-[500px]"/>
         </div>
    
           <p
-            class=""
+            class="text-4xl text-center"
           >
           あいうえおかきくけこ
           </p>
           <p
-            class=""
+            class="text-4xl text-center"
           >
           さしすせそ
           </p>
           <p
-            class=""
+            class="text-4xl text-center"
           >
           かきくけこ
           </p>
