ADDED:use width heiagh

--- a/src/components/VoicesCard.astro
+++ b/src/components/VoicesCard.astro
@@ -15,7 +15,7 @@ console.log(title,body,avatar)
 
   <div class="bg-white rounded-md shadow p-5 space-y-5">
     <div class="flex items-center space-x-5">
-      <img src={avatar_list[temp]} class="w-14" />
+      <img src={avatar_list[temp]} class="w-14" width="56px" height="56px"/>
       <p class="~text-sm font-bold">{title}</p>
     </div>
     <p set:html={body} class="text-black text-sm leading-5 tracking-wide"/>
