--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,10 +12,10 @@ import Voices from '../components/Voices.astro';
     <div class="">
       <div class="">
         <div class="flex justify-center">
-          <img src="/hero.svg" fetchpriority="high" class="max-w-[500px]"/>
+          <img src="/hero.svg" fetchpriority="high" class="max-w-[500px]" width="90%" height="auto"/>
         </div>
         <div class="w-full flex justify-center ">
-          <img src="/hero_subtitle.svg"  class="max-w-[500px]"/>
+          <img src="/hero_subtitle.svg"  class="max-w-[500px]" width="90%" height="auto"/>
         </div>
    
           <p
