パーセンテージで指定

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Voices from '../components/Voices.astro';
     <div class="">
       <div class="">
         <div class="flex justify-center">
-          <img src="/hero.svg" fetchpriority="high" class="max-w-[500px] w-full h-full" />
+          <img src="/hero.svg" fetchpriority="high" class="max-w-[500px] w-[90%]" />
         </div>
         <div class="w-full flex justify-center ">
           <img src="/hero_subtitle.svg"  class="max-w-[500px] w-full h-full" />
