ADDED:responsive width

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,32 +12,15 @@ import Voices from '../components/Voices.astro';
     <div class="">
       <div class="">
         <div class="flex justify-center">
-          <img src="/hero.svg" fetchpriority="high" class="max-w-[500px] w-[90%]" />
+          <img src="/hero.svg" fetchpriority="high" class="max-w-[500px] w-[300px] sm:w-[500px]" width="500" height="auto" />
         </div>
         <div class="w-full flex justify-center ">
-          <img src="/hero_subtitle.svg"  class="max-w-[500px] w-full h-full" />
+          <img src="/hero_subtitle.svg" class="max-w-[500px] w-[300px] sm:w-[500px]" width="500" height="auto" />
         </div>
-   
-          <p
-            class="text-4xl text-center"
-          >
-          あいうえおかきくけこ
-          </p>
-          <p
-            class="text-4xl text-center"
-          >
-          さしすせそ
-          </p>
-          <p
-            class="text-4xl text-center"
-          >
-          かきくけこ
-          </p>
       </div>
     </div>
     <Carousel />
     <Voices />
   </div>
-  
 </Layout>
 
