--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Voices from '../components/Voices.astro';
     <div class="">
       <div class="">
         <div class="flex justify-center">
-          <img src="/hero.svg" fetchpriority="high" class="max-w-[500px] w-[300px] sm:w-[500px]" width="500" height="auto" />
+          <img src="/hero.svg" fetchpriority="high" class="max-w-[500px] w-[300px] h-auto sm:w-[500px] sm:h-auto" width="500" height="auto" />
         </div>
         <div class="w-full flex justify-center ">
           <img src="/hero_subtitle.svg" class="max-w-[500px] w-[300px] sm:w-[500px]" width="500" height="auto" />
