--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -8,16 +8,20 @@ const imagePaths = Object.keys(images);
 <div class="embla overflow-hidden">
   <div class="embla__container flex flex-shrink-0">
     {
-      imagePaths?.map((item, index) => (
-        <div class="embla__slide flex-grow-0 min-w-64 mr-6  md:min-w-72 md:mr-10 ">
-          <Image
-            class="rounded-md"
-            loading={"lazy"}
-            src={images[item]()}
-            alt=""
-          />
-        </div>
-      ))
+      imagePaths?.map(async (item, index) => {
+        const image = await images[item]();
+        return (
+          <div class="embla__slide flex-grow-0 min-w-64 mr-6  md:min-w-72 md:mr-10 ">
+            <Image
+              class="rounded-md"
+              loading={"lazy"}
+              src={image.default}
+              quality="low"
+              alt=""
+            />
+          </div>
+        );
+      })
     }
   </div>
 </div>
@@ -28,36 +32,39 @@ const imagePaths = Object.keys(images);
   import type { EmblaCarouselType } from "embla-carousel";
   const emblaNode = document.querySelector(".embla");
 
-  const first_slide_delay = (
-    scrollSnapList: number[],
-    emblaApi: EmblaCarouselType
-  ) => {
+  if (emblaNode) {
+    const first_slide_delay = (
+      scrollSnapList: number[],
+      emblaApi: EmblaCarouselType
+    ) => {
+      let delay_list = [1000];
+      for (let i = 0; i < scrollSnapList.length-1; i++) {
+        delay_list.push(3200);
+      }
+      return delay_list;
+    };
 
-    let delay_list = [1000];
-    for (let i = 0; i < scrollSnapList.length-1; i++) {
-      delay_list.push(3200);
+    const options = { loop: true, align: "center" };
+    const plugins = [
+      Autoplay({ stopOnInteraction: false, delay: first_slide_delay }),
+    ];
+    const emblaApi = EmblaCarousel(emblaNode, options, plugins);
+
+    const notEnoughToLoop = !emblaApi.internalEngine().slideLooper.canLoop();
+    if (notEnoughToLoop) {
+      // 現在のスライドを取得
+      const container = document.querySelector(".embla__container");
+      if (container) {
+        const slides = Array.from(container.children); // 既存スライドのリスト
+
+        // スライドを複製して追加
+        slides.forEach((slide) => {
+          const clone = slide.cloneNode(true); // スライドをクローン
+          container.appendChild(clone); // クローンをコンテナに追加
+        });
+
+        emblaApi.reInit();
+      }
     }
-    return delay_list;
-  };
-
-  const options = { loop: true, align: "center" };
-  const plugins = [
-    Autoplay({ stopOnInteraction: false, delay: first_slide_delay }),
-  ];
-  const emblaApi = EmblaCarousel(emblaNode, options, plugins);
-
-  const notEnoughToLoop = !emblaApi.internalEngine().slideLooper.canLoop();
-  if (notEnoughToLoop) {
-    // 現在のスライドを取得
-    const container = document.querySelector(".embla__container");
-    const slides = Array.from(container.children); // 既存スライドのリスト
-
-    // スライドを複製して追加
-    slides.forEach((slide) => {
-      const clone = slide.cloneNode(true); // スライドをクローン
-      container.appendChild(clone); // クローンをコンテナに追加
-    });
-
-    emblaApi.reInit();
   }
 </script>
